[workspace]
members = ["proc_macros"]

[workspace.package]
edition = "2021"
authors = ["William Tremblay <tremwil@users.noreply.github.com>"]
keywords = ["oop", "inheritance", "vtable", "cpp", "ffi"]
categories = ["development-tools::ffi", "no-std::no-alloc"]
license = "MIT"
repository = "https://github.com/tremwil/bridgeless"

[package]
name = "bridgeless"
version = "0.1.0"
description = "Bridgeless C++ FFI supporting single inheritance and vtables"
edition.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
bridgeless-proc-macros = { path = "proc_macros", version = "0.1.0" }